# dvstor

./: .gitignore  .memory_node_1234.pid  AGENTS.md  CMakeLists.txt  README.md
reports/breakdown/: baseline.json  baseline.txt  gpu-cache.json  gpu-cache.txt  gpudirect-rdma.json  gpudirect-rdma.txt
scripts/: build_offline_index.sh  package_vector_test_lib.sh  run_breakdown_test.sh  start_compute_node.sh  start_memory_node.sh
src/: compute_thread.hh  memory_node.hh  memory_node_main.cc
src/common/: configuration.hh  constants.hh  statistics.hh
src/gpu/: gpu_kernel_launcher.cu  gpu_kernel_launcher.hh  gpu_vector_cache.cu  gpu_vector_cache.hh  gpunetio_query_engine.cc  gpunetio_query_engine.hh  gpunetio_query_launcher.cu  gpunetio_query_launcher.hh
src/gpu/kernels/: distance_kernels.cuh
src/service/: breakdown.hh  compute_service.cc  compute_service.hh
src/vamana/: vamana.hh
test/: CMakeLists.txt  README.md
test/config/: local_single_cn.ini  local_single_cn_gpunetio.ini  remote_singe_cn.ini
test/include/: dvstor_index.h
test/scripts/: check_gdrcopy_sanity.sh  check_gpu_rdma_env.sh  install_gdrcopy.sh  install_gpunetio_env.sh  run_gpu_rdma_probe.sh  run_gpunetio_rdma_probe.sh
test/src/: dvstor_index.cpp  gpu_rdma_probe.c  main.cpp
tools/: dvstor_breakdown_benchmark.cc  run_recall_test.sh  shine_breakdown_benchmark.cc  vamana_offline_builder.cc
